--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-        .hide {
-            display: none;
-        }
-        .show {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
     <div class="header">
@@ -21,13 +16,14 @@
     </div>
     
     <div class="container">
-        <div id="loader">Loading....</div>
-        <div id="content">
-            <div class="upper-level-data"></div>
+        <div id="loader">
+            <div id="loading-bar-spinner" class="spinner">
+                <div class="spinner-icon"></div>
+            </div>
         </div>
+        <div id="content"></div>
     </div>
 
-    <!-- <script src="assets/js/require.min.js"></script> -->
     <script src="assets/js/bundle.js"></script>
 </body>
 </html>
